--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,57 @@
 beautifulsoup4==4.8.2
 billiard==3.6.1.0
 bs4==0.0.1
+CacheControl==0.12.6
+cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
+Click==7.0
 coala-utils==0.5.1
 cssselect==1.1.0
 feedfinder2==0.0.4
 feedparser==5.2.1
+firebase-admin==3.2.1
+Flask==1.1.1
+Flask-Cors==3.0.8
+google-api-core==1.16.0
+google-api-python-client==1.7.11
+google-auth==1.11.0
+google-auth-httplib2==0.0.3
+google-cloud-core==1.2.0
+google-cloud-firestore==1.6.1
+google-cloud-storage==1.25.0
+google-resumable-media==0.5.0
+googleapis-common-protos==1.51.0
+grpcio==1.26.0
+httplib2==0.17.0
 idna==2.8
+itsdangerous==1.1.0
 jieba3k==0.35.1
+Jinja2==2.11.1
 lxml==4.4.2
+MarkupSafe==1.1.1
+msgpack==0.6.2
 mysql-connector==2.2.9
 newspaper3k==0.2.8
 nltk==3.4.5
 numpy==1.18.1
 pandas==0.25.3
 Pillow==7.0.0
+protobuf==3.11.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 python-dateutil==2.8.1
 pytz==2019.3
 PyYAML==5.3
 requests==2.22.0
 requests-file==1.4.3
+rsa==4.0
 selenium==3.141.0
 six==1.14.0
 soupsieve==1.9.5
 tinysegmenter==0.3
 tldextract==2.2.2
 twitterscraper==1.4.0
+uritemplate==3.0.1
 urllib3==1.25.8
+Werkzeug==0.16.1
